Fix visitor jumping

--- a/public/styles.css
+++ b/public/styles.css
@@ -1145,8 +1145,12 @@ video {
   align-items: center;
   flex-direction: column;
   padding: 50px;
-  width: 100%;
-  height: 100vh;
+  height: 150px;
+  width: 150px;
+  position: absolute;
+  top: calc(50% - 75px);
+  left: calc(50% - 75px);
+  z-index: 99999999;
 }
 
 .loader-container > p {
